# micropython_pocketpd

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  boot.py  config.py  justfile  main.py  pyproject.toml
app/: energy.py  settings.py  state_machine.py  ui.py
docs/: state_machine.mmd  state_machine.puml
drivers/: ap33772.py  button.py  display.py  encoder.py  ina226.py
lib/: rotary.py  rotary_irq_rp2.py
sim/: devices.py  main_sim.py  server.py
sim/static/: app.js  index.html
tests/: run_tests.py  test_ap33772.py  test_button.py  test_encoder.py  test_energy.py  test_ina226.py  test_settings.py  test_smoke.py  test_state_machine.py  test_ui.py  testutil.py
